Webpage -Final Changes

--- a/NERVAS_web/Main.html
+++ b/NERVAS_web/Main.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <!--<div class="icon-box">
-        <div class="icon">🎓</div>
+        <div class="icon"></div>
       </div>-->
     </div>
   </section>
@@ -81,49 +81,43 @@
         </div>
         </div>
             <!-- Nuestro Equipo -->
-        <section class="destinations" style="align-content: center !important;">
+        <section class="destinations" style="align-content: center !important; height: 650px;">
   <h2>Nuestros Integrantes</h2>
-  <div class="card-carousel">
+  <div class="card-carousel" style="height: 450px;">
     <div class="card">
-      <img src="/images/cappadocia.jpg" alt="Cappadocia - Turkey">
-      <div class="card-text">
+      <img src="../NERVAS_web/images/jes.jpeg" style="height: 340px;" >
+      <div class="card-text" style="max-height: 50px !important;">
         <h3 style="color: #34d8dd;">Jeslie González</h3>
-        <p>----puesto</p>
       </div>
     </div>
     <div class="card">
-      <img src="/images/switzerland.jpg" alt="Switzerland Alps">
+      <img src="../NERVAS_web/images/yohann.jpeg"style="height: 340px;" >
       <div class="card-text">
         <h3 style="color: #50c878;">Yohann Mora</h3>
-        <p>----puesto</p>
       </div>
     </div>
     <div class="card">
-      <img src="/images/japan.jpg" alt="Japan">
+      <img src="../NERVAS_web/images/shezko.jpeg" style="height:340px;" >
       <div class="card-text">
         <h3 style="color: #fd6824;">Francesco Fallas</h3>
-        <p>----puesto</p>
       </div>
     </div>
     <div class="card">
-      <img src="/images/morocco.jpg" alt="Casablanca - Morocco">
+      <img src="../NERVAS_web/images/rebe.jpg"style="height: 340px;" >
       <div class="card-text">
         <h3 style="color: #1f8689;">Rebeca Rivera</h3>
-        <p>----puesto</p>
       </div>
     </div>
     <div class="card">
-      <img src="/images/cappadocia.jpg" alt="Cappadocia - Turkey">
+      <img src="../NERVAS_web/images/putty.jpeg"style="height: 340px;" >
       <div class="card-text">
         <h3 style="color: #359b57;">Derek Araya</h3>
-        <p>----puesto</p>
       </div>
     </div>
     <div class="card">
-      <img src="/images/cappadocia.jpg" alt="Cappadocia - Turkey">
+      <img src="../NERVAS_web/images/firpy.jpeg" style="height: 340px;" >
       <div class="card-text">
         <h3 style="color: #ffd12c;">Luis Felipe Granados</h3>
-        <p>----puesto</p>
       </div>
     </div>
   </div>
